# sdlplay

./: CAKGraphics.cpp  CAKGraphics.h  CMakeCache.txt  CMakeLists.txt  Makefile  ProdSDL.geany  audio.c  cmake_install.cmake  makesdl  prodcom.cpp  prodcom.h  prodmain.cpp  prodnfc.cpp  prodsdl  prodsdl.cfg  prodsdl.cpp  prodsdl.sh  prodsdlg.cfg  prodweb.cpp  sdl2hello  sdl2helloworld  sdl2helloworld.cpp  sdl2play.cpp  sdlplay
